fix: Spacing

--- a/webapp/src/components/AssetPage/SaleRentActionBox/SaleRentActionBox.module.css
+++ b/webapp/src/components/AssetPage/SaleRentActionBox/SaleRentActionBox.module.css
@@ -87,7 +87,7 @@
   flex-direction: row;
 }
 
-.buy + .bid {
+.buy + .fullWidth > .bid {
   margin-left: 8px !important;
 }
 
